2011-02-18  Xavier Perseguers  <xavier@causal.ch>

	* Raised version to 0.7.1
	* Added class around service id in h1
	* Added back to list block for services in SINGLE mode
	* Added css span around service block number
	* Included confederation-level services

2011-02-15  Xavier Perseguers  <xavier@causal.ch>

	* Raised version to 0.7.0
	* Enhanced service template
	* Updated FlexForm configuration to override service version to be used
	* Added TS option to override service version to be used

2011-02-13  Xavier Perseguers  <xavier@causal.ch>

	* Added option to show time needed to generate plugin's output

2011-02-12  Xavier Perseguers  <xavier@causal.ch>

	* Added context-sensitive help for FlexForm configuration
	* Enhanced FlexForm configuration with additional labels and tooltips

2011-02-11  Xavier Perseguers  <xavier@causal.ch>

	* Raised version to 0.6.2
	* Raised version to 0.6.1
	* Added FlexForm configuration option to restrict blocks to be shown (domain, topic, service)
	* Added condition to remove link to parent view if not authorized
	* Added default CSS
	* Added general header for describing services
	* Added "Other Settings" FlexForm tab with override of targets
	* Updated French translations

2011-02-09  Xavier Perseguers  <xavier@causal.ch>

	* Renamed methods getById() to findById()

2011-02-07  Xavier Perseguers  <xavier@causal.ch>

	* Raised version to 0.6.0
	* Raised version to 0.5.0
	* Implemented retrieval of service contactBlock
	* Sanitized input with strip_tags()
	* Updated documentation
	* Implemented details of an audience, a view, a domain and a topic using marker-based templates
	* Added author, creation date and last modification date to domain model

2011-02-06  Xavier Perseguers  <xavier@causal.ch>

	* Implemented details of a service using marker-based templates
	* Added some German/French translation
	* Updated documentation of templates and hooks
	* Added hooks to postprocess subparts and markers